trying to fix internal error

--- a/web/index.html
+++ b/web/index.html
@@ -47,6 +47,9 @@
         </div>
         <button onclick="submitForm()">Submit</button>
     </div>
+    <div class="image">
+        <img id="predictedchart" alternate="Not Updated Yet">
+    </div>
     <script src="script.js"></script>
 </body>
 
